[package]
name = "netmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
clap = {version = "4.0.22", features = ["derive"]}
serde_json = "1.0"
serde = {version = "1.0.147", features = ["derive"]}